fixed datatable overflow

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -31,6 +31,7 @@ header{
     background-color: #ffffff;
     box-shadow: 0 7px 14px 0 rgba(59,64,94,0.1), 0 3px 6px 0 rgba(0,0,0,0.07);
     padding: 1em;
+    overflow-x: scroll;
 }
 
 .logo_footer {
